--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@ cffi==0.9.2
 cloudinary==1.1.1
 cryptography==0.8.2
 Django==1.8.1
-django-facebook==6.0.2
 django-filter==0.9.2
 django-smartfields==1.0.6
 djangorestframework==3.1.1
 enum34==1.0.4
+facebook-sdk==0.4.0
 gunicorn==19.3.0
 kombu==3.0.26
 lxml==3.4.4
