--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,14 @@
-amqp==1.4.6
-anyjson==0.3.3
-billiard==3.3.0.20
-celery==3.1.18
-cffi==0.9.2
-cloudinary==1.1.1
-cryptography==0.8.2
-Django==1.8.1
-django-filter==0.9.2
-django-smartfields==1.0.6
-djangorestframework==3.1.1
-enum34==1.0.4
-facebook-sdk==0.4.0
-gunicorn==19.3.0
-kombu==3.0.26
-lxml==3.4.4
-Markdown==2.6.2
+appdirs==1.4.3
+Django==1.11.1
+facebook-sdk==2.0.0
 MySQL-python==1.2.5
-ndg-httpsclient==0.4.0
-oauthlib==0.7.2
-Pillow==2.8.1
-pyasn1==0.1.7
-pycparser==2.13
-pyOpenSSL==0.15.1
-pytz==2015.2
-requests==2.7.0
-requests-oauthlib==0.5.0
-simplejson==3.6.5
-six==1.9.0
-twython==3.2.0
-Unidecode==0.4.17
+oauthlib==2.0.2
+olefile==0.44
+packaging==16.8
+Pillow==4.1.1
+pyparsing==2.2.0
+pytz==2017.2
+requests==2.14.2
+requests-oauthlib==0.8.0
+six==1.10.0
+twython==3.4.0
