--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+dj-database-url==0.4.2
 Django==1.11.1
 facebook-sdk==2.0.0
 MySQL-python==1.2.5
@@ -6,9 +7,11 @@ oauthlib==2.0.2
 olefile==0.44
 packaging==16.8
 Pillow==4.1.1
+psycopg2==2.7.1
 pyparsing==2.2.0
 pytz==2017.2
 requests==2.14.2
 requests-oauthlib==0.8.0
 six==1.10.0
 twython==3.4.0
+whitenoise==3.3.0
