--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 dj-database-url==0.4.2
 Django==1.11.1
 facebook-sdk==2.0.0
+gunicorn==19.7.1
 MySQL-python==1.2.5
 oauthlib==2.0.2
 olefile==0.44
