--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 appdirs==1.4.3
+cloudinary==1.8.0
 dj-database-url==0.4.2
 Django==1.11.1
 facebook-sdk==2.0.0
+funcsigs==1.0.2
 gunicorn==19.7.1
+mock==2.0.0
 MySQL-python==1.2.5
 oauthlib==2.0.2
 olefile==0.44
 packaging==16.8
+pbr==3.0.1
 Pillow==4.1.1
 psycopg2==2.7.1
 pyparsing==2.2.0
@@ -15,4 +19,5 @@ requests==2.14.2
 requests-oauthlib==0.8.0
 six==1.10.0
 twython==3.4.0
+urllib3==1.21.1
 whitenoise==3.3.0
